--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                             </div>
                         </div>
 
-                        <div className="flex-1 p-2 sm:p-4 pb-20">
+                        <div className="flex-1 p-2 sm:p-4 pb-24 sm:pb-28">
                             <div className="grid grid-cols-2 sm:grid-cols-3 lg:grid-cols-4 gap-2 sm:gap-3">
                                 {inventory.map((item) => (
                                     <div key={item.id} className="relative">
