--- a/index.html
+++ b/index.html
@@ -244,7 +244,16 @@
             };
 
             const handleItemClick = (id) => {
-                if (longPressItem === id) return; // 롱프레스 중이면 선택 안함
+                if (longPressItem === id) {
+                    // 롱프레스 모드인 품목을 다시 클릭하면 롱프레스 모드 해제
+                    setLongPressItem(null);
+                    return;
+                }
+                if (longPressItem !== null) {
+                    // 다른 품목이 롱프레스 모드일 때는 그것만 해제
+                    setLongPressItem(null);
+                    return;
+                }
                 setSelectedItem(selectedItem === id ? null : id);
             };
 
@@ -261,7 +270,11 @@
 
             return (
                 <>
-                <div className="w-full min-h-screen bg-gray-100 overflow-auto">
+                <div className="w-full min-h-screen bg-gray-100 overflow-auto" onClick={() => {
+                    if (longPressItem !== null) {
+                        setLongPressItem(null);
+                    }
+                }}>
                     <div className="min-h-screen flex flex-col max-w-7xl mx-auto">
                         <div className="bg-black shadow-md p-3 sm:p-4 flex-shrink-0 sticky top-0 z-10">
                             <div className="flex items-center justify-center gap-2 sm:gap-3">
